Update links and images in index.html
Updated image sources and links for various sections.

--- a/index.html
+++ b/index.html
@@ -181,25 +181,25 @@
     <div class="header">
         <!-- Enlace agregado para abrir la página de Lubricación al hacer clic en el logo -->
         <a href="https://www.idilsalubricacion.com/" target="_blank">
-            <img src="https://i.ibb.co/9pYgYx0/logo-1ik4fcne.jpg" alt="Logo" class="logo">
+            <img src="LogoIdilsa.jpeg" alt="Logo" class="logo">
         </a>
         <h1>Comercializadora y Servicios</h1>
     </div>
     
     <nav>
         <ul>
-            <li><a href="https://sumptuous-well-grill.glitch.me/" class="fade-in">NOSOTROS</a></li>
-            <li><a href="https://swift-wooded-lemming.glitch.me/" class="fade-in">UBICACIÓN</a></li>
-            <li><a href="https://wise-lizard-quality.glitch.me/" class="fade-in">REDES</a></li>
-            <li><a href="https://rift-steady-marten.glitch.me/" class="fade-in">FAQS</a></li>
+            <li><a href="https://nostrosidilsa.netlify.app/" class="fade-in">NOSOTROS</a></li>
+            <li><a href="https://ubicacionidilsa.netlify.app/" class="fade-in">UBICACIÓN</a></li>
+            <li><a href="https://redessocialesidilsa.netlify.app/" class="fade-in">REDES</a></li>
+            <li><a href="https://preguntasidilsa.netlify.app/" class="fade-in">FAQS</a></li>
         </ul>
     </nav>
 
     <div class="content fade-in" id="comercializadora">
         <h2>Comercializadora</h2>
         <!-- Enlace actualizado -->
-        <a href="https://interesting-lead-yam.glitch.me/">
-            <img src="https://i.ibb.co/SNG2BB1/comercializadora.png" alt="Comercializadora">
+        <a href="https://idilsacomercializadoras.netlify.app/">
+            <img src="comercializadora.jpeg" alt="Comercializadora">
         </a>
         <p>Soluciones personalizadas para tus necesidades industriales.</p>
     </div>
@@ -208,7 +208,7 @@
         <h2>Maquinados</h2>
         <!-- Enlace actualizado -->
         <a href="https://sites.google.com/view/idilsa-inicio-parte1/p%C3%A1gina-principal">
-            <img src="https://i.ibb.co/wRWhVRj/maquinados.png" alt="Maquinados">
+            <img src="maquinados.jpeg" alt="Maquinados">
         </a>
         <p>Precisión y calidad en cada trabajo realizado.</p>
     </div>
@@ -217,7 +217,7 @@
         <h2>Lubricación</h2>
         <!-- Enlace actualizado -->
         <a href="https://sites.google.com/view/idilsa-incio-parte-2/p%C3%A1gina-principal">
-            <img src="https://i.ibb.co/r50J47X/lubricacion.png" alt="Lubricación">
+            <img src="lubricacíon.jpeg" alt="Lubricación">
         </a>
         <p>Productos de alta calidad para el mantenimiento de tu maquinaria.</p>
     </div>
