Update image sources for commercial services

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ footer{
   <div class="grid">
 
     <a href="https://idilsacomercializadoras.netlify.app/" class="card">
-      <img src="comercializadora.jpeg" alt="Comercializadora">
+      <img src="33736.png" alt="Comercializadora">
       <div class="card-content">
         <h2>Comercializadora</h2>
         <p>Distribución de productos industriales con atención personalizada.</p>
@@ -255,7 +255,7 @@ footer{
     </a>
 
     <a href="https://sites.google.com/view/idilsa-inicio-parte1/p%C3%A1gina-principal" class="card">
-      <img src="maquinados.jpeg" alt="Maquinados">
+      <img src="33737.png" alt="Maquinados">
       <div class="card-content">
         <h2>Maquinados</h2>
         <p>Procesos de alta precisión y calidad garantizada.</p>
@@ -263,7 +263,7 @@ footer{
     </a>
 
     <a href="https://sites.google.com/view/idilsa-incio-parte-2/p%C3%A1gina-principal" class="card">
-      <img src="lubricacíon.jpeg" alt="Lubricación">
+      <img src="33738.png" alt="Lubricación">
       <div class="card-content">
         <h2>Lubricación</h2>
         <p>Protección y rendimiento para maquinaria industrial.</p>
