--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ header{
   display:flex;
   flex-direction:column;
   align-items:center;
-  box-shadow:0 6px 20px rgba(0,0,0,.08);
+  box-shadow:0 4px 20px rgba(0,0,0,.08);
   position:sticky;
   top:0;
   z-index:1000;
@@ -51,7 +51,6 @@ header img{
   margin-bottom:10px;
 }
 
-/* ===== NAV ===== */
 nav ul{
   list-style:none;
   display:flex;
@@ -65,7 +64,18 @@ nav a{
   font-weight:600;
   font-size:.95rem;
   color:var(--azul);
+  position:relative;
 }
+
+nav a::after{
+  content:"";
+  position:absolute;
+  left:0;bottom:-4px;
+  width:0;height:2px;
+  background:var(--azul);
+  transition:.3s;
+}
+nav a:hover::after{width:100%;}
 
 /* ===== HERO ===== */
 .hero{
@@ -74,7 +84,7 @@ nav a{
   align-items:center;
   justify-content:center;
   text-align:center;
-  padding:60px 16px;
+  padding:70px 16px;
   background:
     linear-gradient(rgba(0,51,102,.85),rgba(0,51,102,.85)),
     url("https://images.unsplash.com/photo-1581092160607-ee22621dd758") center/cover no-repeat;
@@ -82,23 +92,24 @@ nav a{
 }
 
 .hero h1{
-  font-size:2.1rem;
+  font-size:2.2rem;
   font-weight:800;
-  animation:fadeDown .8s ease;
+  animation:fadeUp .9s ease forwards;
 }
 
 .hero p{
   margin-top:14px;
+  font-size:1rem;
   max-width:520px;
-  animation:fadeUp .8s ease .2s both;
+  animation:fadeUp 1.1s ease forwards;
 }
 
 /* ===== STATS ===== */
 .stats{
-  padding:60px 16px 0;
+  padding:55px 16px 0;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
-  gap:18px;
+  gap:16px;
 }
 
 .stat{
@@ -106,13 +117,13 @@ nav a{
   padding:22px 10px;
   border-radius:16px;
   text-align:center;
-  box-shadow:0 14px 28px rgba(0,0,0,.1);
+  box-shadow:0 12px 28px rgba(0,0,0,.1);
   opacity:0;
   transform:translateY(30px);
-  transition:.6s ease;
+  transition:.6s;
 }
 
-.stat.visible{
+.stat.show{
   opacity:1;
   transform:translateY(0);
 }
@@ -138,40 +149,31 @@ nav a{
 }
 
 .card{
-  background:white;
-  border-radius:18px;
-  overflow:hidden;
   text-decoration:none;
   color:inherit;
-  box-shadow:0 20px 40px rgba(0,0,0,.12);
-  opacity:0;
-  transform:translateY(40px);
-  transition:.6s ease;
-}
-
-.card.visible{
-  opacity:1;
-  transform:translateY(0);
-}
-
-.card:hover{
-  transform:translateY(-6px);
+  display:block;
+  transition:.4s ease;
 }
 
 .card img{
   width:100%;
   height:220px;
   object-fit:contain;
-  background:#f0f2f5;
+  transition:.4s ease;
 }
 
 .card-content{
-  padding:26px;
+  background:white;
+  padding:24px;
+  margin-top:-12px;
+  border-radius:18px;
+  box-shadow:0 18px 36px rgba(0,0,0,.12);
 }
 
 .card h2{
   color:var(--azul);
-  margin-bottom:10px;
+  font-size:1.3rem;
+  margin-bottom:8px;
 }
 
 .card p{
@@ -179,24 +181,21 @@ nav a{
   color:#555;
 }
 
+.card:hover{
+  transform:translateY(-8px);
+}
+
+.card:hover img{
+  transform:scale(1.03);
+}
+
 /* ===== FOOTER ===== */
 footer{
   background:var(--azul);
   color:white;
   text-align:center;
-  padding:26px 14px;
+  padding:24px 14px;
   font-size:.85rem;
-}
-
-/* ===== ANIMACIONES ===== */
-@keyframes fadeUp{
-  from{opacity:0; transform:translateY(20px)}
-  to{opacity:1; transform:translateY(0)}
-}
-
-@keyframes fadeDown{
-  from{opacity:0; transform:translateY(-20px)}
-  to{opacity:1; transform:translateY(0)}
 }
 
 /* ===== DESKTOP ===== */
@@ -212,7 +211,7 @@ footer{
   }
 
   .hero h1{
-    font-size:2.7rem;
+    font-size:2.6rem;
   }
 
   .stats{
@@ -225,6 +224,12 @@ footer{
     margin:auto;
     grid-template-columns:repeat(3,1fr);
   }
+}
+
+/* ===== ANIM ===== */
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(30px)}
+  to{opacity:1;transform:translateY(0)}
 }
 </style>
 </head>
@@ -254,37 +259,37 @@ footer{
 </section>
 
 <section class="stats">
-  <div class="stat"><h3 data-count="20">0</h3><span>Años de experiencia</span></div>
-  <div class="stat"><h3 data-count="150">0</h3><span>Clientes</span></div>
-  <div class="stat"><h3 data-count="24">0</h3><span>Soporte 24/7</span></div>
-  <div class="stat"><h3 data-count="2">0</h3><span>Sucursales</span></div>
-  <div class="stat"><h3 data-count="100">0</h3><span>Compromiso (%)</span></div>
+  <div class="stat"><h3 data-num="20">0</h3><span>Años de experiencia</span></div>
+  <div class="stat"><h3 data-num="150">0</h3><span>Clientes</span></div>
+  <div class="stat"><h3 data-num="24">0</h3><span>Soporte</span></div>
+  <div class="stat"><h3 data-num="2">0</h3><span>Sucursales</span></div>
+  <div class="stat"><h3 data-num="100">0</h3><span>Compromiso (%)</span></div>
 </section>
 
 <section class="sections">
   <div class="grid">
 
-    <a href="#" class="card">
-      <img src="33736.png">
+    <a href="https://idilsacomercializadoras.netlify.app/" target="_blank" class="card">
+      <img src="33736.png" alt="Comercializadora">
       <div class="card-content">
         <h2>Comercializadora</h2>
-        <p>Distribución industrial con soluciones confiables.</p>
+        <p>Distribución de productos industriales con atención personalizada.</p>
       </div>
     </a>
 
-    <a href="#" class="card">
-      <img src="33737.png">
+    <a href="https://sites.google.com/view/idilsa-inicio-parte1/p%C3%A1gina-principal" target="_blank" class="card">
+      <img src="33737.png" alt="Maquinados">
       <div class="card-content">
         <h2>Maquinados</h2>
-        <p>Alta precisión en procesos industriales.</p>
+        <p>Procesos de alta precisión y calidad garantizada.</p>
       </div>
     </a>
 
-    <a href="#" class="card">
-      <img src="33738.png">
+    <a href="https://sites.google.com/view/idilsa-incio-parte-2/p%C3%A1gina-principal" target="_blank" class="card">
+      <img src="33738.png" alt="Lubricación">
       <div class="card-content">
         <h2>Lubricación</h2>
-        <p>Rendimiento y protección para maquinaria.</p>
+        <p>Protección y rendimiento para maquinaria industrial.</p>
       </div>
     </a>
 
@@ -296,39 +301,35 @@ footer{
 </footer>
 
 <script>
-/* ===== OBSERVER ===== */
-const observer = new IntersectionObserver(entries=>{
+/* CONTADORES + REVEAL */
+const stats=document.querySelectorAll(".stat");
+
+const observer=new IntersectionObserver(entries=>{
   entries.forEach(entry=>{
     if(entry.isIntersecting){
-      entry.target.classList.add("visible");
-      if(entry.target.querySelector("h3[data-count]")){
-        animateCount(entry.target.querySelector("h3"));
+      entry.target.classList.add("show");
+      const num=entry.target.querySelector("[data-num]");
+      if(num && !num.started){
+        num.started=true;
+        let target=+num.dataset.num;
+        let count=0;
+        let step=target/60;
+        let interval=setInterval(()=>{
+          count+=step;
+          if(count>=target){
+            num.textContent=target+(target===24?" /7":"+");
+            clearInterval(interval);
+          }else{
+            num.textContent=Math.floor(count);
+          }
+        },20);
       }
-      observer.unobserve(entry.target);
     }
   });
-},{threshold:0.3});
+},{threshold:.5});
 
-document.querySelectorAll(".stat, .card").forEach(el=>observer.observe(el));
-
-/* ===== CONTADORES ===== */
-function animateCount(el){
-  const target = +el.dataset.count;
-  let current = 0;
-  const increment = target / 60;
-
-  const counter = setInterval(()=>{
-    current += increment;
-    if(current >= target){
-      el.textContent = target + (target === 24 ? "/7" : target === 100 ? "%" : "+");
-      clearInterval(counter);
-    }else{
-      el.textContent = Math.floor(current);
-    }
-  },20);
-}
+stats.forEach(stat=>observer.observe(stat));
 </script>
 
 </body>
 </html>
-
