--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ nav a:hover::after{
   padding:70px 16px;
   background:
     linear-gradient(rgba(0,51,102,.85), rgba(0,51,102,.85)),
-    url("muro1.jpeg") center/cover no-repeat;
+    url("trabajadores.jpeg") center/cover no-repeat;
   color:white;
 }
 
