Update link for Maquinados card in index.html

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ footer{
       </div>
     </a>
 
-    <a href="https://sites.google.com/view/idilsa-inicio-parte1/p%C3%A1gina-principal" target="_blank" class="card">
+    <a href="https://maquinadosidilsa.netlify.app/" target="_blank" class="card">
       <img src="33737.png" alt="Maquinados">
       <div class="card-content">
         <h2>Maquinados</h2>
